--- a/src/main/resources/css/godScreen.css
+++ b/src/main/resources/css/godScreen.css
@@ -18,3 +18,16 @@
 .button:pressed {
     -fx-background-image: url("../graphics/btns/cm_btn_green_pressed.png");
 }
+
+.grayedOut {
+    -fx-background-image: url("../graphics/btns/cm_btn_grey.png");
+    -fx-background-size: stretch;
+    -fx-text-fill: white;
+    -fx-text-alignment: center;
+    -fx-alignment: center;
+}
+
+.grayedOut:pressed {
+    -fx-background-image: url("../graphics/btns/cm_btn_grey.png");
+    -fx-background-size: stretch;
+}
