--- a/src/main/resources/fxml/godsMenu.fxml
+++ b/src/main/resources/fxml/godsMenu.fxml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="799.0" prefWidth="1287.0" styleClass="mainPanel" stylesheets="@../css/godScreen.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.GodsPanelController">
+<StackPane fx:id="stackPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="799.0" prefWidth="1287.0" styleClass="mainPanel" stylesheets="@../css/godScreen.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.GodsPanelController">
    <children>
       <HBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="256.0" prefWidth="1230.0">
          <children>
-            <VBox prefHeight="231.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="apollo" prefHeight="231.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -22,7 +19,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="APOLLO" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="APOLLO" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -32,7 +29,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="ares" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -42,7 +39,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="ARES" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="ARES" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -52,7 +49,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="artemis" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -62,7 +59,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="ARTEMIS" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="ARTEMIS" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -72,7 +69,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="athena" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -82,7 +79,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="ATHENA" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="ATHENA" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -92,7 +89,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="atlas" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -102,7 +99,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="ATLAS" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="ATLAS" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -119,7 +116,7 @@
       </HBox>
       <HBox layoutX="160.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="256.0" prefWidth="1137.0">
          <children>
-            <VBox prefHeight="231.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="charont" prefHeight="231.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -129,7 +126,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="CHARONT" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="CHARON" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -139,7 +136,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="demeter" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -149,7 +146,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="DEMETER" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="DEMETER" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -159,7 +156,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="hephaestus" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -169,7 +166,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="HEPHAESTUS" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="HEPHAESTUS" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -179,7 +176,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="hestia" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -189,7 +186,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="HESTIA" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="HESTIA" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -199,7 +196,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="minotaur" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -209,7 +206,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="MINOTAUR" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="MINOTAUR" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -226,7 +223,7 @@
       </HBox>
       <HBox layoutX="160.0" layoutY="285.0" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="256.0" prefWidth="1137.0">
          <children>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="pan" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -236,7 +233,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="PAN" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="PAN" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -246,7 +243,7 @@
                   <Insets left="100.0" right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="prometheus" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -256,7 +253,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="PROMETHEUS" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="PROMETHEUS" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -266,7 +263,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="triton" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -276,7 +273,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="TRITON" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="TRITON" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
@@ -286,7 +283,7 @@
                   <Insets right="40.0" />
                </HBox.margin>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
+            <VBox fx:id="zeus" layoutX="10.0" layoutY="10.0" prefHeight="255.0" prefWidth="157.0" styleClass="godFrame" stylesheets="@../css/godScreen.css">
                <children>
                   <ImageView fitHeight="200.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -296,7 +293,7 @@
                         <Insets left="14.0" top="16.0" />
                      </VBox.margin>
                   </ImageView>
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#test" prefHeight="29.0" prefWidth="117.0" text="ZEUS" textAlignment="CENTER">
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#showGod" prefHeight="29.0" prefWidth="117.0" text="ZEUS" textAlignment="CENTER">
                      <VBox.margin>
                         <Insets bottom="10.0" left="20.0" top="5.0" />
                      </VBox.margin>
